--- a/tareas.json
+++ b/tareas.json
@@ -1,15 +1,22 @@
 [
-{
-    "titulo":"crear tareas.json",
-    "estado":"terminada"
-
-},
-{
-    "titulo":"crear array de objetos",
-    "estado":"en proceso"
-},
-{
-    "titulo":"crear archivo app.js",
-    "estado": "pendiente"
-}
+    {
+        "titulo": "Pepo y sus amigos",
+        "estado": "Terminada"
+    },
+    {
+        "titulo": "Los amigos perrunos",
+        "estado": "En progreso"
+    },
+    {
+        "titulo": "Los gatitos",
+        "estado": "Pendiente"
+    },
+    {
+        "titulo": "Tobi el cocker viejo",
+        "estado": "Terminada"
+    },
+    {
+        "titulo": "Probando",
+        "estado": "pendiente"
+    }
 ]
